--- a/Dinkum/ECAllInOne.csproj
+++ b/Dinkum/ECAllInOne.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7DEA71F9-8BB3-4C78-B7F5-B23B9AF35BA5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HelloMod</RootNamespace>
-    <AssemblyName>HelloMod</AssemblyName>
+    <RootNamespace>AllinOne</RootNamespace>
+    <AssemblyName>ECAllinOne</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
